--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,9 @@ jobs:
       
       - name: "login to Docker hub "
         run: docker login --username ${{secrets.DOCKER_USER}} --password ${{secrets.DOCKER_PASS}}
+      
+      - name: "Bulding docker image"
+        run: docker build -t ${{secrets.DOCKER_USER}}/myimage . 
+    
+      - name: "pushing to docker hub"
+        run: docker push ${{secrets.DOCKER_USER}}/myimage
